--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "playwright-framework",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
@@ -8,7 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.57.0",
-    "@types/node": "^25.0.9"
+    "@playwright/test": "^1.58.0",
+    "@types/node": "^25.1.0"
   }
 }
